--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>1.8</java.version>
         <fastjson.version>1.2.60</fastjson.version>
         <guava.version>27.0.1-jre</guava.version>
+        <hutool.version>5.0.4</hutool.version>
     </properties>
 
 <!--    <dependencies>
@@ -49,6 +50,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
