--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -103,5 +103,8 @@
                 </plugin>
             </plugins>
         </build>-->
+    <build>
+        <finalName>app</finalName>
+    </build>
 
 </project>
